# registrant

./: LICENSE  README.md  registrant.go  registrant.py  wdns-registrant.cabal
config/: config.go  config_test.go
connection/: connection.go  connection_test.go
registrant/: conn.py  registrant.py
res/json/: cfg.json
session/: session.go
src/: Main.hs
